# rust-sila-kzg

./: CHANGELOG.md  Cargo.toml  README.md  release-please-config.json
.github/scripts/: compile_all_targets_c.sh  compile_all_targets_c_sharp.sh  compile_all_targets_c_sharp_new.sh  compile_all_targets_java.sh
.github/workflows/: release-csharp-bindings.yml  release-node-bindings.yml  release-rust-crates.yml
bindings/c/: Cargo.toml
bindings/c/src/: blob_to_kzg_commitment.rs  compute_blob_kzg_proof.rs  compute_cells_and_kzg_proofs.rs  compute_kzg_proof.rs  lib.rs  recover_cells_and_kzg_proofs.rs  verify_blob_kzg_proof.rs  verify_blob_kzg_proof_batch.rs  verify_cells_and_kzg_proofs_batch.rs  verify_kzg_proof.rs
bindings/csharp/csharp_code/: SilaKZG.sln
bindings/csharp/csharp_code/SilaKZG.bindings/: SilaKZG.csproj  native_methods.g.cs  native_methods.loading.cs  silakzg.cs
bindings/csharp/rust_code/: Cargo.toml  build.rs
bindings/golang/: go.mod  prover.go  prover_test.go
bindings/java/java_code/: build.gradle  settings.gradle
bindings/java/rust_code/: Cargo.toml  build.rs  sila_cryptography_LibSilaKZG.h
bindings/java/rust_code/src/: errors.rs  lib.rs
bindings/nim/nim_code/: nim_sila_kzg.nimble
bindings/nim/rust_code/: Cargo.toml  build.rs
bindings/node/: Cargo.toml  index.js  package.json
bindings/node/src/: lib.rs
crates/cryptography/bls12_381/: Cargo.toml
crates/cryptography/erasure_codes/: README.md
crates/cryptography/kzg_multi_open/: README.md
crates/eip4844/: Cargo.toml
crates/eip4844/examples/: compute_kzg_proof.rs
crates/eip4844/src/: errors.rs  prover.rs
crates/eip4844/tests/: blob_to_kzg_commitment.rs  compute_blob_kzg_proof.rs  verify_blob_kzg_proof.rs
crates/eip7594/: Cargo.toml
crates/eip7594/examples/: compute_cells_and_kzg_proof.rs
crates/eip7594/src/: errors.rs  lib.rs
crates/eip7594/tests/: blob_to_kzg_commitment.rs  common.rs  verify_cell_kzg_proof_batch.rs
crates/serialization/: Cargo.toml
crates/serialization/src/: constants.rs
crates/sip4844/src/: verifier.rs
crates/sip4844/tests/: compute_kzg_proof.rs  verify_blob_kzg_proof_batch.rs  verify_kzg_proof.rs
crates/sip7594/benches/: benchmark-mt.rs  benchmark-st.rs
crates/sip7594/src/: prover.rs  sip4844_methods.rs  verifier.rs
crates/sip7594/tests/: compute_cells_and_kzg_proofs.rs  recover_cells_and_kzg_proofs.rs
crates/trusted_setup/: Cargo.toml
crates/trusted_setup/src/: lib.rs
papers/: erasure_codes.md
scripts/: compile.sh  compile_to_native.sh
test_vectors/: README.md
(+37 files in other folders)
