[package]
name = "rust_sila_kzg"
description = "This crate provides an implementation of the cryptography needed for SIP-7594 and SIP4844"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }

[lints]
workspace = true

[dependencies]
trusted_setup = { workspace = true }
kzg_multi_open = { workspace = true }
bls12_381 = { workspace = true }
serialization = { workspace = true }
hex = { workspace = true }
erasure_codes = { workspace = true }
sip4844 = { workspace = true }
rayon = { workspace = true, optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = { version = "0.1.41", default-features = false, features = [
    "attributes",
], optional = true }

[features]
singlethreaded = ["kzg_multi_open/singlethreaded", "sip4844/singlethreaded"]
multithreaded = [
    "rayon",
    "kzg_multi_open/multithreaded",
    "sip4844/multithreaded",
]
tracing = ["dep:tracing", "kzg_multi_open/tracing", "sip4844/tracing"]

[dev-dependencies]
criterion = "0.5.1"
rand = { workspace = true }
hex = { workspace = true }
# Serde-yaml has been deprecated, however since we only
# use it for tests, we will not update it.
serde_yaml = "0.9.34"
tracing-subscriber = { version = "0.3.19", features = ["std", "env-filter"] }
tracing-forest = { version = "0.1.6", features = ["ansi", "smallvec"] }

[[bench]]
name = "benchmark-mt"
harness = false
required-features = ["multithreaded"]

[[bench]]
name = "benchmark-st"
harness = false
required-features = ["singlethreaded"]
