[package]
name = "java_sila_kzg"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }

[lints]
workspace = true

[dependencies]
jni = "^0.21.1"
c_sila_kzg = { workspace = true }

[lib]
crate-type = ["cdylib"]
